--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -29,4 +29,4 @@ jobs:
         uses: chromaui/action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          projectToken: e7daa087acbc
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
